--- a/style.css
+++ b/style.css
@@ -8,3 +8,9 @@ body{
     width: 100%;
     height: 100%;
 }
+
+.wrapper{
+    width: 100%;
+    height: 100vh;
+    background:linear-gradient(120deg, #662D8C ,#ED1E79);
+}
