--- a/style.css
+++ b/style.css
@@ -14,3 +14,36 @@ body{
     height: 100vh;
     background:linear-gradient(120deg, #662D8C ,#ED1E79);
 }
+
+.container{
+    width: 450px;
+    height: 300px;
+    background-color: aliceblue;
+    border-radius: 1rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.left{
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.right{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #662D8C;
+
+}
