--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing:border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 body{
@@ -39,6 +44,10 @@ body{
     flex-direction: column;
 }
 
+.left h1{
+    fo
+}
+
 .right{
     width: 40%;
     height: 100%;
@@ -49,7 +58,4 @@ body{
     color: #fff;
     /* background-image: linear-gradient(120deg, #ff5858 10%, #f09819 90%); */
     background-color: #f09819 ;
-
-
-
 }
