--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body{
 }
 
 .container{
-    width: 450px;
-    height: 300px;
+    width: 30rem;
+    height: 20rem;
     background-color: aliceblue;
     border-radius: 1rem;
     position: absolute;
@@ -72,4 +72,52 @@ body{
 .right h4{
     font-size: 3rem;
 
+}
+
+@media (max-width:650px) {
+    .container{
+        width: 20rem;
+        height: 15rem;
+    
+    }
+    .left h1{
+        font-size: 6rem;
+    }
+    
+    .left h4{
+        font-size: 1.5rem;
+    
+    }
+    .right h2{
+        font-size: 1.5rem;
+    }
+    
+    .right h4{
+        font-size: 2rem;
+    
+    }
+}
+
+@media (max-width:300px) {
+    .container{
+        width: 15rem;
+        height: 10rem;
+    
+    }
+    .left h1{
+        font-size: 4rem;
+    }
+    
+    .left h4{
+        font-size: 1rem;
+    
+    }
+    .right h2{
+        font-size: 1rem;
+    }
+    
+    .right h4{
+        font-size: 1.5rem;
+    
+    }
 }
